--- a/composer.json
+++ b/composer.json
@@ -54,5 +54,11 @@
   },
   "config": {
     "sort-packages": true
-  }
+  },
+  "repositories": [
+      {
+        "type": "vcs",
+        "url": "https://github.com/bcartfall/acacha-user"
+      }
+  ]
 }
