--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "php": "^7.1.3",
     "acacha/filesystem": "^0.1.2",
     "acacha/helpers": "^0.1.4",
+    "bcartfall/acacha-user": "^0.2",
     "creativeorange/gravatar": "~1.0",
     "laravel/framework": "^6.0",
     "league/flysystem": "^1.0"
